--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^5.0.1",
     "react-native": "0.72.6",
     "react-native-app-intro-slider": "^4.0.4",
+    "react-native-confirmation-code-field": "^7.3.2",
     "react-native-floating-label-input": "^1.4.3",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
