--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-confirmation-code-field": "^7.3.2",
     "react-native-floating-label-input": "^1.4.3",
+    "react-native-radio-buttons-group": "^3.0.5",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
