--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-confirmation-code-field": "^7.3.2",
     "react-native-floating-label-input": "^1.4.3",
     "react-native-image-picker": "^7.1.0",
+    "react-native-indicators": "^0.17.0",
     "react-native-radio-buttons-group": "^3.0.5",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
