--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "axios": "^1.6.7",
     "expo": "~49.0.15",
     "expo-dev-client": "~2.4.12",
+    "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.0.1",
     "react-native": "0.72.6",
     "react-native-app-intro-slider": "^4.0.4",
-    "react-native-confirmation-code-field": "^7.3.2",
+    "react-native-confirmation-code-field": "^7.4.0",
     "react-native-floating-label-input": "^1.4.3",
     "react-native-image-picker": "^7.1.0",
     "react-native-indicators": "^0.17.0",
@@ -33,8 +34,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
-    "typescript": "^5.1.3",
-    "expo-image-picker": "~14.3.2"
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
